# sts2-mod-studio

./: .gitignore  Cargo.toml  README.md  TESTING.md
.github/workflows/: ci.yml  release.yml
M6RealTest/: .gitignore  project.stsmod.json
MyMod/: .gitignore  project.stsmod.json
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/icons/: icon.icns
apps/studio/src-tauri/src/: main.rs
apps/studio/ui/: app.js  index.html  preview.js  style.css
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: codegen.rs  config.rs  ids.rs  import.rs  lib.rs  live.rs  model.rs  pck.rs  pipeline.rs
crates/core/tests/: codegen.rs  live.rs  m5.rs  m6.rs
target-msvc/: .rustc_info.json
target-msvc/release/: sts2mod.d
target-msvc/release/.fingerprint/anstream-6747bf30cec10d91/: lib-anstream  lib-anstream.json
target-msvc/release/.fingerprint/anstyle-7e72a6e760b1499a/: lib-anstyle  lib-anstyle.json
target-msvc/release/.fingerprint/anstyle-parse-f62e0ec35488b466/: lib-anstyle_parse  lib-anstyle_parse.json
target-msvc/release/.fingerprint/anstyle-query-e83fcdd1005e3ee1/: lib-anstyle_query  lib-anstyle_query.json
target-msvc/release/.fingerprint/anstyle-wincon-9e444f6da8b1c5fd/: lib-anstyle_wincon  lib-anstyle_wincon.json
target-msvc/release/.fingerprint/anyhow-135b6ef5bc321796/: lib-anyhow  lib-anyhow.json
target-msvc/release/.fingerprint/anyhow-c5f5359cd1c891e8/: build-script-build-script-build  build-script-build-script-build.json
(+101 files in other folders)
