[package]
name = "sts2mod-studio"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
sts2mod-core = { path = "../../../crates/core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
